# mcp-auth-gateway

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  VERIFICATION.md  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml  trust-boundary.yml
deploy/: README.md
deploy/k8s/: gateway.yaml  kind-calico.yaml  namespace.yaml  network-policy.yaml  test-bypass-prevention.sh  upstream.yaml
docs/: SECURITY-REVIEW-HISTORY.md  THREAT-MODEL.md
examples/: scope-policy.json  tool-policy.json
src/mcp_gateway/: __main__.py  app.py  audit.py  config.py  pkce.py  policy.py  tool_policy.py  verifier.py
tests/: conftest.py  test_app.py  test_audit_logging.py  test_config.py  test_hardening.py  test_mcp_method_surface.py  test_origin_and_offloop.py  test_parser_differential.py  test_parser_fuzz.py  test_policy_pkce.py  test_stream_audit_and_limits.py  test_tool_authz.py  test_tool_policy.py  test_verifier.py  test_verifier_concurrency.py
verification/: .gitignore  README.md  e2e_client.py  gen_keys.py  jwks_server.py  mint_token.py  real_upstream.py  run_e2e.ps1  stub_upstream.py
